# McSAS3

./: .buildinfo  .cookiecutterrc  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  McSAS3.ipynb  README.md  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  mcsas3_cli_histogrammer.py  mcsas3_cli_runner.py  minimal.ipynb  objects.inv  output.json  output.txt  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_McData1D_unittest.py  test_McData2D_unittest.py  test_optimizer_integraltest.py  test_state.h5  test_test.py  (+2 more)
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/reference/: index.doctree
.github/workflows/: build.yml  ci-cd.yml  coverage.yml  docs.yml  release.yml  reset-badges.yml  tests.yml
_modules/: index.html
_modules/mcsas3/: McData.html  McData1D.html  McData2D.html  McHDF.html  McHat.html  McPlot.html  mcanalysis.html  mccore.html  mcmodel.html  mcmodelhistogrammer.html  mcopt.html  osb.html
_sources/: installation.rst.txt  usage.rst.txt
_static/: documentation_options.js  pygments.css
badges/: build.json  docs.json  tests.json
ci/: badge.svg.tmpl  make_badges.py  requirements.txt  update.py
coverage-report/: cov.json  index.html
coverage-report/20230321_554db3ad79/: d_55539055f40b152d_McData1D_py.html  d_55539055f40b152d_McData2D_py.html  d_55539055f40b152d_McData_py.html  d_55539055f40b152d_McHDF_py.html  d_55539055f40b152d_McHat_py.html  d_55539055f40b152d_McPlot_py.html  d_55539055f40b152d___init___py.html  d_55539055f40b152d_mcanalysis_py.html  d_55539055f40b152d_mccore_py.html  d_55539055f40b152d_mcmodel_py.html  d_55539055f40b152d_mcmodelhistogrammer_py.html  d_55539055f40b152d_mcopt_py.html  d_55539055f40b152d_osb_py.html  d_a44f0ac069e85531_test_McData1D_unittest_py.html  d_a44f0ac069e85531_test_McData2D_unittest_py.html  d_a44f0ac069e85531_test_mcsas3_py.html  d_a44f0ac069e85531_test_optimizer_integraltest_py.html  index.html  status.json
coverage-report/20230321_66097a3d11/: d_55539055f40b152d_McData1D_py.html  d_55539055f40b152d_McData2D_py.html  d_55539055f40b152d_McData_py.html  d_55539055f40b152d_McHDF_py.html  d_55539055f40b152d_McHat_py.html  d_55539055f40b152d_McPlot_py.html  d_55539055f40b152d___init___py.html  d_55539055f40b152d_mcanalysis_py.html  d_55539055f40b152d_mccore_py.html  d_55539055f40b152d_mcmodel_py.html  d_55539055f40b152d_mcmodelhistogrammer_py.html  d_55539055f40b152d_mcopt_py.html  d_55539055f40b152d_osb_py.html  d_a44f0ac069e85531_test_McData1D_unittest_py.html  d_a44f0ac069e85531_test_McData2D_unittest_py.html  d_a44f0ac069e85531_test_mcsas3_py.html  d_a44f0ac069e85531_test_optimizer_integraltest_py.html  index.html
coverage-report/20230322_8030a9dafe/: d_55539055f40b152d_McData1D_py.html  d_55539055f40b152d_McData2D_py.html  d_55539055f40b152d_McData_py.html  d_55539055f40b152d_McHDF_py.html  d_55539055f40b152d_McHat_py.html  d_55539055f40b152d_McPlot_py.html  d_55539055f40b152d___init___py.html  d_55539055f40b152d_mcanalysis_py.html  d_55539055f40b152d_mccore_py.html  d_55539055f40b152d_mcmodel_py.html  d_55539055f40b152d_mcmodelhistogrammer_py.html  d_55539055f40b152d_mcopt_py.html  d_55539055f40b152d_osb_py.html  d_a44f0ac069e85531_test_McData1D_unittest_py.html  d_a44f0ac069e85531_test_McData2D_unittest_py.html  d_a44f0ac069e85531_test_mcsas3_py.html  d_a44f0ac069e85531_test_optimizer_integraltest_py.html  index.html
coverage-report/20230323_5e93a06c65/: d_55539055f40b152d_McData1D_py.html  d_55539055f40b152d_McData2D_py.html  d_55539055f40b152d_McData_py.html  d_55539055f40b152d_McHDF_py.html  d_55539055f40b152d_McHat_py.html  d_55539055f40b152d_McPlot_py.html  d_55539055f40b152d___init___py.html  d_55539055f40b152d_mcanalysis_py.html  d_55539055f40b152d_mccore_py.html  d_55539055f40b152d_mcmodel_py.html  d_55539055f40b152d_mcmodelhistogrammer_py.html  d_55539055f40b152d_mcopt_py.html  d_55539055f40b152d_osb_py.html  d_a44f0ac069e85531_test_McData1D_unittest_py.html  d_a44f0ac069e85531_test_McData2D_unittest_py.html  d_a44f0ac069e85531_test_mcsas3_py.html  d_a44f0ac069e85531_test_optimizer_integraltest_py.html  index.html
coverage-report/20230323_75c75f72ac/: d_55539055f40b152d_McData1D_py.html  d_55539055f40b152d_McData2D_py.html  d_55539055f40b152d_McData_py.html  d_55539055f40b152d_McHDF_py.html  d_55539055f40b152d_McHat_py.html  d_55539055f40b152d_McPlot_py.html  d_55539055f40b152d___init___py.html  d_55539055f40b152d_mcanalysis_py.html  d_55539055f40b152d_mccore_py.html  d_55539055f40b152d_mcmodel_py.html  d_55539055f40b152d_mcmodelhistogrammer_py.html  d_55539055f40b152d_mcopt_py.html  d_55539055f40b152d_osb_py.html  d_a44f0ac069e85531_test_McData1D_unittest_py.html  d_a44f0ac069e85531_test_McData2D_unittest_py.html  d_a44f0ac069e85531_test_mcsas3_py.html  d_a44f0ac069e85531_test_optimizer_integraltest_py.html  index.html
coverage-report/20230323_b6d420dd3c/: d_55539055f40b152d_McData1D_py.html  (+18 more)
doc/: McSAS3_structure.xml
docs/: McSAS3_structure.xml  changelog.rst  conf.py  index.rst  readme.rst  requirements.txt
example/: McSAS3.ipynb  example_batch_processing.py  minimal.ipynb
example_configurations/: hist_config_dual.yaml  read_config_csv.yaml  read_config_nxs.yaml  read_config_nxs_with_omit.yaml  run_config_spheres.yaml  run_config_spheres_auto.yaml
mcsas3/: McData.py  McData1D.py  McData2D.py  McHDF.py  McHat.py  McPlot.py  __init__.py  mcanalysis.py  mccore.py  mcmodel.py  mcmodelhistogrammer.py  mcopt.py  osb.py
notebooks/: McSAS3.ipynb
reference/: index.html
templates/: CHANGELOG.md.j2
testdata/: 009766_forSasView.h5  S2870 BSA THF 1 1 d.pdh  datamerge.nxs  fancyCubePD0p01.nxs  quickstartdemo1.csv
tests/: requirements.txt  test_McData1D_unittest.py  test_McData2D_unittest.py  test_mcsas3.py  test_optimizer_integraltest.py
(+436 files in other folders)
