[project]
name = "mcsas3"
description = "A refactored McSAS for analysis of X-ray and Neutron scattering data."
dynamic = ["version", "readme"]
license = "GPL-3.0-or-later"
classifiers = [
  # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Framework :: Jupyter :: JupyterLab",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
]
dependencies = [

]

[[project.authors]]
name = "Brian R. Pauw"
email = "brian.pauw@bam.de"

[project.urls]
homepage = "https://BAMresearch.github.io/McSAS3"
documentation = "https://BAMresearch.github.io/McSAS3"
repository = "https://github.com/BAMresearch/McSAS3"
changelog = "https://BAMresearch.github.io/McSAS3/changelog.html"

[project.scripts]
mcsas3-runner = "mcsas3.mcsas3_cli_runner:main"
mcsas3-histogrammer = "mcsas3.mcsas3_cli_histogrammer:main"

[build-system]
requires = [
    "setuptools>=40.6",
    "wheel",
]
# check-manifest checks that, https://github.com/mgedmin/check-manifest/commit/c9df78
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcsas3*"]

[tool.setuptools.dynamic]
version = {attr = "mcsas3.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.coverage.report]
path = "coverage-report"  # see coverage.yml github action

# on version numbers: https://peps.python.org/pep-0440/
# and bottom of https://softwareengineering.stackexchange.com/a/151558
[tool.semantic_release]
#major_on_zero = false # no major release when current major version is zero
version_variables = [                        # version location
    "src/mcsas3/__init__.py:__version__",
    "docs/conf.py:version",
]
[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "enh", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat", "enh"]
patch_tags = ["fix", "perf"]
[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore", ".*\\bGHA\\b.*", ".*\\b[gG][hH] actions?\\b.*"]
[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.black]
line-length = 100
preview = true

[tool.isort]
profile = "black"
line_length = 100
group_by_package = true
known_first_party = "mcsas3"
ensure_newline_before_comments = true
extend_skip = ["ci/templates", ".ipynb_checkpoints"]

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
